Reverted text spacing and fixed footer issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -98,7 +98,7 @@
 	background-color:$background-color;
     position:absolute;
     bottom:0;
-    height:115px;
+    
     width:100%;
 }
 
